# XTM

./: .gitignore  .rustfmt.toml  Cargo.toml  README  README.md  flake.nix  justfile
nix/: formatter.nix
src/: app.rs  main.rs  theme.rs
src/api/xbox/: client.rs  error.rs  models.rs
src/models/: mod.rs  token.rs
src/storage/: mod.rs  settings.rs  tokens.rs
src/ui/: toolbar.rs  window.rs
src/ui/pages/: about.rs  dashboard.rs  follow.rs  messages.rs  mod.rs  reports.rs  settings.rs  tokens.rs
src/ui/widgets/: log.rs  mod.rs  token_list.rs
src/xbox/: client.rs  error.rs  mod.rs
xtask/: Cargo.toml  README
xtask/src/: main.rs
