[package]
name = "xtm"
version = "0.1.0"
edition = "2024"

authors = ["playfairs"]
description = "Xbox Token Manager"
license = "GPL-3.0-only"
readme = "README.md"

[dependencies]
eframe = "0.31"
egui = "0.31"

tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
] }

reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

chrono = { version = "0.4", features = ["serde"] }

uuid = { version = "1", features = ["v4", "serde"] }

directories = "6"

anyhow = "1"
thiserror = "2"

tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"